ready to integrate google sign in

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "allowImportingTsExtensions": true,
     "types": ["node"],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     },
     "plugins": [
       {
