--- a/package.json
+++ b/package.json
@@ -13,11 +13,25 @@
   },
   "author": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.965.0",
+    "@aws-sdk/lib-storage": "^3.965.0",
+    "@aws-sdk/s3-request-presigner": "^3.965.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/postcss": "^4.1.18",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.1",
+    "next-auth": "^5.0.0-beta.30",
+    "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "dotenv": "^17.2.3",
-    "ring-client-api": "^14.2.0"
+    "ring-client-api": "^14.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -27,6 +41,7 @@
     "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
     "prettier": "^3.7.4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
   },
