--- a/.github/workflows/ring-timelapse.yml
+++ b/.github/workflows/ring-timelapse.yml
@@ -38,7 +38,7 @@ jobs:
       R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
       R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
       R2_ENDPOINT: ${{ secrets.R2_ENDPOINT }}
-      R2_ACCOUNT_ID: ${{ secrets.R2_ACCOUNT_ID }}
+      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       R2_BUCKET: ${{ secrets.R2_BUCKET }}
       START_ISO: ${{ inputs.startIso }}
       END_ISO: ${{ inputs.endIso }}
