--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "pipeline:test": "tsx --conditions=react-server pipeline-test.ts"
   },
   "author": "",
   "dependencies": {
@@ -39,11 +40,16 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "client-only": "^0.0.1",
     "eslint": "^9.39.2",
     "prettier": "^3.7.4",
+    "server-only": "^0.0.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.52.0"
+    "typescript-eslint": "^8.52.0",
+    "wrangler": "^4.58.0"
   },
   "keywords": []
 }
