--- a/.github/workflows/ring-timelapse.yml
+++ b/.github/workflows/ring-timelapse.yml
@@ -2,17 +2,9 @@ name: ring-timelapse
 
 on:
   schedule:
-    - cron: "0 1 * * *" # 9pm Eastern during DST
-    - cron: "0 2 * * *" # 9pm Eastern during Standard Time
+    - cron: "0 0 * * *" # 8pm Eastern during DST
+    - cron: "0 1 * * *" # 8pm Eastern during Standard Time
   workflow_dispatch:
-    inputs:
-      speed:
-        description: Playback speed (default 40x)
-        required: false
-        default: "40"
-      cameraId:
-        description: Optional camera id (uses first camera if not provided)
-        required: false
 
 jobs:
   timelapse:
@@ -23,12 +15,10 @@ jobs:
       R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
       R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
       R2_ENDPOINT: ${{ secrets.R2_ENDPOINT }}
-      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       R2_BUCKET: ${{ secrets.R2_BUCKET }}
       LATITUDE: ${{ secrets.LATITUDE }}
       LONGITUDE: ${{ secrets.LONGITUDE }}
-      SPEED: ${{ inputs.speed }}
-      RING_CAMERA_ID: ${{ inputs.cameraId }}
+      RING_CAMERA_ID: ${{ secrets.RING_CAMERA_ID }}
     steps:
       - uses: actions/checkout@v4
 
@@ -44,4 +34,4 @@ jobs:
         run: npm ci
 
       - name: Run timelapse
-        run: npx tsx scripts/run-timelapse.ts --cameraId=$RING_CAMERA_ID
+        run: npx tsx scripts/run-timelapse.ts
